--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^14.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
